pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunctionType0ParameterListDelimiter.pkl
f: ( -> String
res1 = 42


